<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/background_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_menu_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/background"
            app:layout_constraintBottom_toTopOf="@id/background_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_mask"
            app:layout_constraintBottom_toBottomOf="@id/background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/background_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/back"
            style="@style/RobotoNormal12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x8"
            android:alpha="0.5"
            android:drawablePadding="@dimen/x4"
            android:text="@string/back"
            android:textColor="@color/text_white"
            app:drawableStartCompat="@mipmap/path_left"
            app:layout_constraintBottom_toBottomOf="@id/top_menu_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_menu_guideline" />

        <TextView
            android:id="@+id/rectangl_13"
            style="@style/BlackRectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x6"
            android:background="@mipmap/rectangle"
            android:gravity="center_vertical"
            android:text="@string/_13"
            app:layout_constraintBottom_toTopOf="@id/name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/start_vertical_guideline" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x4"
            android:layout_marginEnd="@dimen/x8"
            android:fontFamily="@font/roboto_black"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white_light"
            android:textSize="@dimen/_40sp"
            app:layout_constraintBottom_toBottomOf="@id/background_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toTopOf="@id/background_guideline" />

        <TextView
            android:id="@+id/tag"
            style="@style/Roboto14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:layout_marginEnd="@dimen/x8"
            android:text="@string/tag_text"
            android:textColor="@color/pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <ImageView
            android:id="@+id/full_star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x4"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:tint="@color/pink"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/full_star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x2"
            android:layout_marginTop="@dimen/x4"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/full_star_1"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:tint="@color/pink"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/full_star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x2"
            android:layout_marginTop="@dimen/x4"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/full_star_2"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:tint="@color/pink"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/full_star_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x2"
            android:layout_marginTop="@dimen/x4"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/full_star_3"
            app:layout_constraintTop_toBottomOf="@id/tag"
            app:tint="@color/pink"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/empty_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x2"
            android:layout_marginTop="@dimen/x4"
            android:src="@drawable/ic_star_icon"
            app:layout_constraintStart_toEndOf="@id/full_star_4"
            app:layout_constraintTop_toBottomOf="@id/tag"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_reviews"
            style="@style/RobotoBlack14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x4"
            android:layout_marginTop="@dimen/x2"
            android:text="@string/_125_reviews"
            android:textAllCaps="true"
            android:textColor="@color/my_grey"
            app:layout_constraintStart_toEndOf="@id/empty_star"
            app:layout_constraintTop_toBottomOf="@id/tag" />

        <TextView
            android:id="@+id/storyline_name"
            style="@style/RobotoBlack14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x12"
            android:text="@string/storyline"
            android:textColor="@color/white_light"
            app:layout_constraintStart_toEndOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/text_reviews" />

        <TextView
            android:id="@+id/storyline"
            style="@style/Roboto14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x2"
            android:layout_marginEnd="@dimen/x8"
            android:alpha="0.75"
            android:gravity="start"
            android:text="@string/storyline_text"
            android:textColor="@color/text_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline_name" />

        <TextView
            android:id="@+id/cast_name"
            style="@style/RobotoBlack14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x12"
            android:text="@string/cast"
            android:textColor="@color/white_light"
            app:layout_constraintStart_toEndOf="@id/start_vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/x8"
            android:layout_marginTop="@dimen/x4"
            android:layout_marginBottom="@dimen/x8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cast_name"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/view_holder_actor">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>